modify wording in conc nb

--- a/notebooks/concentration_set.ipynb
+++ b/notebooks/concentration_set.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Choosing sera concentrations is an important consideration for DMS selections. Here, we will use simulated data to find the optimal set of sera concentrations that provides the best performance while minimizing the **number of concentrations** (or selection experiments) required."
+    "Choosing sera concentrations is an important consideration for DMS selections. We'll use simulated data to estimate the optimal set of sera concentrations that provides the best performance while minimizing the **number of concentrations** (or selection experiments) required."
    ]
   },
   {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
        "[180000 rows x 5 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -312,12 +312,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, we'll fit multiple `Polyclonal` models to determine if a **single** concentration is sufficient for inference and prediction."
+    "First, we'll fit multiple `Polyclonal` models to determine how models fit on data measured at **single** concentrations perform."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,19 +430,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-3bbfcc94ee654c189ea7d33b20b0197f\"></div>\n",
+       "<div id=\"altair-viz-86300e42b84a498a8479d8e292d98d73\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-3bbfcc94ee654c189ea7d33b20b0197f\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-3bbfcc94ee654c189ea7d33b20b0197f\");\n",
+       "    if (outputDiv.id !== \"altair-viz-86300e42b84a498a8479d8e292d98d73\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-86300e42b84a498a8479d8e292d98d73\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -491,7 +491,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,9 +512,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The correlation between predicted and true beta coefficients is maximized at an \n",
-    "\n",
-    "Interestingly, 1 concentration can work, but needs to be carefully chosen as a concentration that is either too low (i.e., `IC91.443` where many mutated variants escape and even some wildtype) or too high (i.e., `IC99.998` where few mutated variants escape) reduces performance on inferring the true beta coefficients."
+    "The best correlation between predicted and true beta coefficients is observed when the wildtype virus is potently neutralized. However, the correlation is reduced when the concentration is too low (i.e., many mutated variants escape and even some wildtype) and too high (i.e., few mutated variants escape).  "
    ]
   },
   {
@@ -526,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,19 +579,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-6128dcdc83eb4b8fbc20d6edfdb207ef\"></div>\n",
+       "<div id=\"altair-viz-2f52bf94de774bb496906b5e06765be3\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-6128dcdc83eb4b8fbc20d6edfdb207ef\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-6128dcdc83eb4b8fbc20d6edfdb207ef\");\n",
+       "    if (outputDiv.id !== \"altair-viz-2f52bf94de774bb496906b5e06765be3\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-2f52bf94de774bb496906b5e06765be3\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -642,7 +640,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -660,19 +658,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Only a single concentration was needed for excellent IC90 prediction."
+    "Across all models fit on data with single concentrations, IC90 prediction was excellent."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we'll fit a couple more `Polyclonal` models to determine if adding a second or third concentration to the best performing single concentration `IC99.9` will improve beta coefficient inference. As a reference, we also fit a `Polyclonal` model on all 6 concentrations. This should represent the best performing model, as it is fit on the most data points."
+    "Next, we'll fit a couple more `Polyclonal` models to determine if adding a second or third concentration to the best performing single concentration will improve beta coefficient inference. As a reference, we also fit a `Polyclonal` model on all 6 concentrations. This should represent the best performing model, as it is fit on the most data points."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -723,11 +721,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# add [1] to concentration sets, so we can plot as reference\n",
+    "# add best performing single concentration to concentration sets, so we can plot as reference\n",
     "conc_sets_to_plot = [[1]] + conc_sets\n",
     "\n",
     "all_corrs = pd.DataFrame({'epitope' : [], \n",
@@ -763,19 +761,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-71e419063e0649a6929a2bd4245fb745\"></div>\n",
+       "<div id=\"altair-viz-0164a47488b249e29fbef753372b387c\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-71e419063e0649a6929a2bd4245fb745\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-71e419063e0649a6929a2bd4245fb745\");\n",
+       "    if (outputDiv.id !== \"altair-viz-0164a47488b249e29fbef753372b387c\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-0164a47488b249e29fbef753372b387c\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -824,7 +822,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -848,7 +846,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We see that the performance of models trained on 2-3 concentrations is nearly indistinguishable from that of the model trained on all 6 concentrations. Additionally, adding a concentration or two does lead to a modest gain in inference, especially for the class 1 epitope which is expected to be the hardest to predict since it has the lowest wildtype activity."
+    "We see that the performance of models fit on data with 2-3 concentrations is nearly indistinguishable from that of the model fit on data with all 6 concentrations. Additionally, adding a concentration or two does lead to a modest gain in inference, especially for the class 1 epitope which is expected to be the hardest to predict since it has the lowest wildtype activity."
    ]
   },
   {
@@ -860,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -894,19 +892,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-7b0b120141ce4706a8221b8ebc55f38c\"></div>\n",
+       "<div id=\"altair-viz-019ebf76151143f1a3f9f3d28fe8e738\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-7b0b120141ce4706a8221b8ebc55f38c\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-7b0b120141ce4706a8221b8ebc55f38c\");\n",
+       "    if (outputDiv.id !== \"altair-viz-019ebf76151143f1a3f9f3d28fe8e738\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-019ebf76151143f1a3f9f3d28fe8e738\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -955,7 +953,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -975,7 +973,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fitting with more concentrations maintained the excellent IC90 prediction exhibited by models fit on a single concentration."
+    "Fitting with more concentrations maintained the excellent IC90 prediction exhibited by models fit on data with a single concentration."
    ]
   },
   {
@@ -984,7 +982,7 @@
    "source": [
     "## Summary\n",
     "Based on these simulation experiments:\n",
-    "   - One concentration can be sufficient, but needs to be chosen carefully. Ideally, choose a concentration that is potent enough (ex. `IC99.9`) to neutralize all wildtype viruses, but not potent enough to neutralize large majority of all the variants. For example, `IC99.998` was likely too high as it was still able to neutralize ~35% of functional variants containing >6 mutations, whereas `IC99.9` was only able to neutralize ~10% of these variants. \n",
+    "   - One concentration can be sufficient, but needs to be chosen carefully. Ideally, choose a concentration that is potent enough (ex. `IC99.9`) to neutralize all wildtype viruses, but not potent enough to neutralize large majority of all the variants. \n",
     "   - adding a second or third concentration can help refine inference of true mutation effects, especially for the most subdominant epitopes. These should be chosen to be 2-4 fold higher or lower than the first concentration."
    ]
   }
