--- a/notebooks/simulate_RBD.ipynb
+++ b/notebooks/simulate_RBD.ipynb
@@ -63,7 +63,7 @@
     "Now we simulate libraries of variants with an average of 1, 2, 3, or 4 mutations per gene.\n",
     "These libraries only contain mutations for which we defined mutation escape above.\n",
     "We a [dms_variants](https://jbloomlab.github.io/dms_variants/) `CodonVariantTable` for the RBD with these mutations.\n",
-    "Note that because the `CodonVariantTable` requires sequential 1, 2, ... numbering, we have to do some shifting of sites back and forth with an offset of 331 since that is where the RBD starts"
+    "Note that because the `CodonVariantTable` requires sequential 1, 2, ... numbering, we have to do some shifting of sites back and forth with an offset of 331 since that is where the RBD starts."
    ]
   },
   {
