--- a/optimization.ipynb
+++ b/optimization.ipynb
@@ -30,7 +30,7 @@
     "\n",
     "## Loss function\n",
     "\n",
-    "We use a scaled [Pseudo-Huber](https://en.wikipedia.org/wiki/Huber_loss#Pseudo-Huber_loss_function) loss function on the difference between the predicted and measure escape proabilities.\n",
+    "We use a scaled [Pseudo-Huber](https://en.wikipedia.org/wiki/Huber_loss#Pseudo-Huber_loss_function) loss function on the difference between the predicted and measure escape probabilities.\n",
     "Note that the Pseudo-Huber function is defined as $\\hat{h}_{\\delta}\\left(x\\right) = \\delta^2 \\left(\\sqrt{1 + \\left(x/\\delta\\right)^2} - 1\\right)$ where $\\delta$ is a parameter that indicates when the loss transitions from being quadratic (L2-like) to linear (L1-like) in $a$.\n",
     "Note that we will actually use a scaled Pseudo-Huber function of $h_{\\delta}\\left(x\\right) = \\hat{h}_{\\delta}\\left(x\\right)/\\delta$ so the slope of the loss is one in the linear range.\n",
     "The rationale for a Pseudo-Huber loss is to be robust to outliers (L1-like for large residuals).\n",
@@ -153,9 +153,9 @@
    "source": [
     "### Gradients of regularizations\n",
     "\n",
-    "#### Calculating $\\frac{\\partial R_{\\rm{site\\, escape}}}{\\partial \\beta_{m,e}}$\n",
+    "#### Calculating $\\frac{\\partial R_{\\rm{escape}}}{\\partial \\beta_{m,e}}$\n",
     "\n",
-    "$$\\frac{\\partial R_{\\rm{site\\, escape}}}{\\partial \\beta_{m,e}} = \\frac{\\lambda_{\\rm{escape}}\\beta_{m,e}}{h_{\\delta_{\\rm{escape}}}\\left(\\beta_{m,e}\\right) + \\delta_{\\rm{escape}}} $$"
+    "$$\\frac{\\partial R_{\\rm{escape}}}{\\partial \\beta_{m,e}} = \\frac{\\lambda_{\\rm{escape}}\\beta_{m,e}}{h_{\\delta_{\\rm{escape}}}\\left(\\beta_{m,e}\\right) + \\delta_{\\rm{escape}}} $$"
    ]
   },
   {
