more nb formatting

--- a/notebooks/concentration_set.ipynb
+++ b/notebooks/concentration_set.ipynb
@@ -981,9 +981,21 @@
    "metadata": {},
    "source": [
     "## Summary\n",
-    "Based on these simulation experiments:\n",
-    "   - One concentration can be sufficient, but needs to be chosen carefully. Ideally, choose a concentration that is potent enough (ex. `IC99.9`) to neutralize all wildtype viruses, but not potent enough to neutralize large majority of all the variants. \n",
-    "   - adding a second or third concentration can help refine inference of true mutation effects, especially for the most subdominant epitopes. These should be chosen to be 2-4 fold higher or lower than the first concentration."
+    "Based on these simulation experiments:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. One concentration can be sufficient, but needs to be chosen carefully. Ideally, choose a concentration that is potent enough (ex. `IC99.9`) to neutralize all wildtype viruses, but not potent enough to neutralize large majority of all the variants. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Adding a second or third concentration can help refine inference of true mutation effects, especially for the most subdominant epitopes. These should be chosen to be 2-4 fold higher or lower than the first concentration."
    ]
   }
  ],
@@ -1003,7 +1015,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
