--- a/notebooks/mutation_rate.ipynb
+++ b/notebooks/mutation_rate.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
        "[360000 rows x 5 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,19 +312,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-fc5e4c46ac974e4a96c6095fd3911282\"></div>\n",
+       "<div id=\"altair-viz-7b387802bdae45e3bf08b44782bcad2b\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-fc5e4c46ac974e4a96c6095fd3911282\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-fc5e4c46ac974e4a96c6095fd3911282\");\n",
+       "    if (outputDiv.id !== \"altair-viz-7b387802bdae45e3bf08b44782bcad2b\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-7b387802bdae45e3bf08b44782bcad2b\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -373,7 +373,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,19 +462,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-4a3bb15ad51b46919f1689a09bff8c9a\"></div>\n",
+       "<div id=\"altair-viz-a01de622df054c22ac564cf5cb83769f\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-4a3bb15ad51b46919f1689a09bff8c9a\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-4a3bb15ad51b46919f1689a09bff8c9a\");\n",
+       "    if (outputDiv.id !== \"altair-viz-a01de622df054c22ac564cf5cb83769f\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-a01de622df054c22ac564cf5cb83769f\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -523,13 +523,13 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# NBVAL_IGNORE_OUTPUT\n",
+    "#NBVAL_IGNORE_OUTPUT\n",
     "alt.Chart(ic90_corrs).mark_circle(size=125).encode(\n",
     "    x='mutation_rate:O',\n",
     "    y='correlation:Q',\n",
@@ -548,7 +548,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "An average of $\\ge$ 2 mutations per variant is needed to infer the beta coefficients for all epitopes targeted by polyclonal antibodies. Our simulation experiments reveal that when there is an average of 1 mutation per variant, the correlation between predicted and true beta coefficients is highest for the most immunodominant epitope 2 and lowest for the most subdominant epitope 1. This is expected, as we should not observe escape for variants with a single mutation in a subdominant epitope. "
+    "An average of at least 2 mutations per variant is needed to infer the beta coefficients for all epitopes targeted by polyclonal antibodies. Our simulation experiments reveal that when there is an average of 1 mutation per variant, the correlation between predicted and true beta coefficients is highest for the most immunodominant epitope 2 and lowest for the most subdominant epitope 1. This is expected, as we should not observe escape for variants with a single mutation in a subdominant epitope. "
    ]
   }
  ],
