add nb to index.rst and modify nb

--- a/notebooks/mutation_rate.ipynb
+++ b/notebooks/mutation_rate.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Choosing a library mutation rate"
+    "# Library mutation rate"
    ]
   },
   {
@@ -16,13 +16,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import time\n",
     "import os\n",
-    "import pickle\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -34,12 +33,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have simulated 4 libraries with noisy measurements. The libraries contain variants with an average of 1, 2, 3, or 4 mutations measured at three different sera concentrations."
+    "We have simulated 4 libraries with noisy measurements measured at three different sera concentrations. The number of mutations per variant in each library is simulated to follow a Poisson distribution. The libraries differ in their average number of mutations (1, 2, 3, or 4) per variant, and are named accordingly."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +180,7 @@
        "[360000 rows x 5 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,30 +204,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model with 1 average mutation rate was already fit.\n",
-      "Model with 2 average mutation rate was already fit.\n",
-      "Model with 3 average mutation rate was already fit.\n",
-      "Model with 4 average mutation rate was already fit.\n"
+      "Fitting model on library with variants containing 1 average mutation(s).\n",
+      "Fitting model on library with variants containing 2 average mutation(s).\n",
+      "Fitting model on library with variants containing 3 average mutation(s).\n",
+      "Fitting model on library with variants containing 4 average mutation(s).\n"
      ]
     }
    ],
    "source": [
     "avg_mut_rates = [1,2,3,4]\n",
-    "os.makedirs('fit_polyclonal_models', exist_ok=True)\n",
-    "       \n",
-    "def fit_polyclonal(num):\n",
-    "    \"\"\"\n",
-    "    Fit `Polyclonal` model on a library with a specific mutation rate.\n",
-    "    Returns fit `Polyclonal` object.\n",
-    "    \"\"\"\n",
-    "    poly_abs = polyclonal.Polyclonal(data_to_fit=noisy_data.query(f\"library == 'avg{num}muts'\"),\n",
+    "\n",
+    "# Store all fit models in a dictionary for future lookup\n",
+    "fit_models = {}\n",
+    "\n",
+    "for n in avg_mut_rates:\n",
+    "    # key name for model\n",
+    "    model_string = f'noisy_[0.25, 1, 4]conc_{n}muts'\n",
+    "    \n",
+    "    poly_abs = polyclonal.Polyclonal(data_to_fit=noisy_data.query(f\"library == 'avg{n}muts'\"),\n",
     "                                     activity_wt_df=pd.DataFrame.from_records(\n",
     "                                         [('1', 1.0),\n",
     "                                          ('2', 3.0),\n",
@@ -245,26 +245,9 @@
     "                                         ),\n",
     "                                     data_mut_escape_overlap='fill_to_data',\n",
     "                                 )\n",
-    "    start = time.time()\n",
+    "    print(f\"Fitting model on library with variants containing {n} average mutation(s).\")\n",
     "    poly_abs.fit()\n",
-    "    return poly_abs, time.time() - start\n",
-    "\n",
-    "# Store all fit models in a dictionary for future lookup\n",
-    "fit_models = {}\n",
-    "for n in avg_mut_rates:\n",
-    "    # keys for models\n",
-    "    model_string = f'noisy_[0.25, 1, 4]conc_{n}muts'\n",
-    "    \n",
-    "    # if model has already been fit, load pickled model and add to fit_models. Otherwise, fit model.\n",
-    "    if os.path.exists(f'fit_polyclonal_models/{model_string}.pkl') is True:\n",
-    "        model = pickle.load(open(f'fit_polyclonal_models/{model_string}.pkl', 'rb'))\n",
-    "        fit_models.update({model_string : model})\n",
-    "        print(f\"Model with {n} average mutation rate was already fit.\")\n",
-    "    else:\n",
-    "        model, time_elapsed = fit_polyclonal(n)\n",
-    "        fit_models.update({model_string : model})\n",
-    "        pickle.dump(model, open(f'fit_polyclonal_models/noisy_[0.25, 1, 4]conc_{n}muts.pkl', 'wb'))\n",
-    "        print(f\"Model with {n} average mutation rate fit in {time_elapsed:.1f} seconds.\")  "
+    "    fit_models.update({model_string : poly_abs})"
    ]
   },
   {
@@ -276,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,19 +295,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-7b387802bdae45e3bf08b44782bcad2b\"></div>\n",
+       "<div id=\"altair-viz-c60463f556734273854f81a0839b84a7\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-7b387802bdae45e3bf08b44782bcad2b\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-7b387802bdae45e3bf08b44782bcad2b\");\n",
+       "    if (outputDiv.id !== \"altair-viz-c60463f556734273854f81a0839b84a7\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-c60463f556734273854f81a0839b84a7\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -373,7 +356,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,153 +377,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Additionally, we’ll look at the correlation between predicted and true IC90’s for each of the fit models. To do this, we’ll predict the IC90’s of variants in a different simulated library that our models were not fit on."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "exact_data = (\n",
-    "    pd.read_csv('RBD_variants_escape_exact.csv', na_filter=None)\n",
-    "    .query('library == \"avg4muts\"')\n",
-    "    .query('concentration in [0.5]')\n",
-    "    .reset_index(drop=True)\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We’ll make the comparison on a log scale, and clip IC90s at values >50 as that is likely to be way outside the dynamic range given the concentrations used."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ic90_corrs = pd.DataFrame({'correlation' : [], \n",
-    "                           'mutation_rate' : []})\n",
-    "\n",
-    "ic90_data = pd.DataFrame({'log_IC90' : [],\n",
-    "                          'predicted_log_IC90' : [],\n",
-    "                          'mutation_rate' : []})\n",
-    "max_ic90 = 50\n",
-    "for n in avg_mut_rates:\n",
-    "    model = fit_models[f'noisy_[0.25, 1, 4]conc_{n}muts']\n",
-    "    \n",
-    "    ic90s = (exact_data[['aa_substitutions', 'IC90']]\n",
-    "         .assign(IC90=lambda x: x['IC90'].clip(upper=max_ic90))\n",
-    "         .drop_duplicates()\n",
-    "         )\n",
-    "    ic90s = model.filter_variants_by_seen_muts(ic90s)\n",
-    "    ic90s = model.icXX(ic90s, x=0.9, col='predicted_IC90', max_c=max_ic90)\n",
-    "\n",
-    "    ic90s = (\n",
-    "        ic90s\n",
-    "        .assign(log_IC90=lambda x: np.log10(x['IC90']),\n",
-    "            predicted_log_IC90=lambda x: np.log10(x['predicted_IC90']),\n",
-    "            )\n",
-    "    )\n",
-    "\n",
-    "    corr = ic90s['log_IC90'].corr(ic90s['predicted_log_IC90'])\n",
-    "    \n",
-    "    ic90_corrs = pd.concat([ic90_corrs,\n",
-    "                    pd.DataFrame({'correlation' : corr,\n",
-    "                                  'mutation_rate' : [f'avg{n}muts']})])\n",
-    "    ic90_data = pd.concat([ic90_data,\n",
-    "                    pd.DataFrame({'log_IC90' : ic90s['log_IC90'],\n",
-    "                                  'predicted_log_IC90' : ic90s['predicted_log_IC90'],\n",
-    "                                  'mutation_rate' : [f'avg{n}muts'] * len(ic90s)})])\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "<div id=\"altair-viz-a01de622df054c22ac564cf5cb83769f\"></div>\n",
-       "<script type=\"text/javascript\">\n",
-       "  (function(spec, embedOpt){\n",
-       "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-a01de622df054c22ac564cf5cb83769f\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-a01de622df054c22ac564cf5cb83769f\");\n",
-       "    }\n",
-       "    const paths = {\n",
-       "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
-       "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
-       "      \"vega-lite\": \"https://cdn.jsdelivr.net/npm//vega-lite@4.17.0?noext\",\n",
-       "      \"vega-embed\": \"https://cdn.jsdelivr.net/npm//vega-embed@6?noext\",\n",
-       "    };\n",
-       "\n",
-       "    function loadScript(lib) {\n",
-       "      return new Promise(function(resolve, reject) {\n",
-       "        var s = document.createElement('script');\n",
-       "        s.src = paths[lib];\n",
-       "        s.async = true;\n",
-       "        s.onload = () => resolve(paths[lib]);\n",
-       "        s.onerror = () => reject(`Error loading script: ${paths[lib]}`);\n",
-       "        document.getElementsByTagName(\"head\")[0].appendChild(s);\n",
-       "      });\n",
-       "    }\n",
-       "\n",
-       "    function showError(err) {\n",
-       "      outputDiv.innerHTML = `<div class=\"error\" style=\"color:red;\">${err}</div>`;\n",
-       "      throw err;\n",
-       "    }\n",
-       "\n",
-       "    function displayChart(vegaEmbed) {\n",
-       "      vegaEmbed(outputDiv, spec, embedOpt)\n",
-       "        .catch(err => showError(`Javascript Error: ${err.message}<br>This usually means there's a typo in your chart specification. See the javascript console for the full traceback.`));\n",
-       "    }\n",
-       "\n",
-       "    if(typeof define === \"function\" && define.amd) {\n",
-       "      requirejs.config({paths});\n",
-       "      require([\"vega-embed\"], displayChart, err => showError(`Error loading script: ${err.message}`));\n",
-       "    } else if (typeof vegaEmbed === \"function\") {\n",
-       "      displayChart(vegaEmbed);\n",
-       "    } else {\n",
-       "      loadScript(\"vega\")\n",
-       "        .then(() => loadScript(\"vega-lite\"))\n",
-       "        .then(() => loadScript(\"vega-embed\"))\n",
-       "        .catch(showError)\n",
-       "        .then(() => displayChart(vegaEmbed));\n",
-       "    }\n",
-       "  })({\"config\": {\"view\": {\"continuousWidth\": 400, \"continuousHeight\": 300}}, \"data\": {\"name\": \"data-67bb067a9ba59a560e878f29256370ed\"}, \"mark\": {\"type\": \"circle\", \"size\": 125}, \"encoding\": {\"tooltip\": [{\"field\": \"mutation_rate\", \"type\": \"nominal\"}, {\"field\": \"correlation\", \"type\": \"quantitative\"}], \"x\": {\"field\": \"mutation_rate\", \"type\": \"ordinal\"}, \"y\": {\"field\": \"correlation\", \"type\": \"quantitative\"}}, \"height\": 200, \"title\": \"predicted vs. true IC90\", \"width\": 200, \"$schema\": \"https://vega.github.io/schema/vega-lite/v4.17.0.json\", \"datasets\": {\"data-67bb067a9ba59a560e878f29256370ed\": [{\"correlation\": 0.952841074428871, \"mutation_rate\": \"avg1muts\"}, {\"correlation\": 0.9919761813058768, \"mutation_rate\": \"avg2muts\"}, {\"correlation\": 0.9966442796637273, \"mutation_rate\": \"avg3muts\"}, {\"correlation\": 0.9985309120166034, \"mutation_rate\": \"avg4muts\"}]}}, {\"mode\": \"vega-lite\"});\n",
-       "</script>"
-      ],
-      "text/plain": [
-       "alt.Chart(...)"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#NBVAL_IGNORE_OUTPUT\n",
-    "alt.Chart(ic90_corrs).mark_circle(size=125).encode(\n",
-    "    x='mutation_rate:O',\n",
-    "    y='correlation:Q',\n",
-    "    tooltip = ['mutation_rate', 'correlation']\n",
-    ").properties(width=200, height=200, title='predicted vs. true IC90')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Summary"
    ]
   },
@@ -548,7 +384,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "An average of at least 2 mutations per variant is needed to infer the beta coefficients for all epitopes targeted by polyclonal antibodies. Our simulation experiments reveal that when there is an average of 1 mutation per variant, the correlation between predicted and true beta coefficients is highest for the most immunodominant epitope 2 and lowest for the most subdominant epitope 1. This is expected, as we should not observe escape for variants with a single mutation in a subdominant epitope. "
+    "An average of at least 2 mutations per variant is needed to infer the beta coefficients for all epitopes targeted by polyclonal antibodies. When there is an average of 1 mutation per variant, the correlation between predicted and true beta coefficients is highest for the most immunodominant epitope 2 and lowest for the most subdominant epitope 1. This is expected, as we should not observe escape for variants with a single mutation in a subdominant epitope. "
    ]
   }
  ],
@@ -568,7 +404,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
